--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
                             <h2 class="relative">Promotions and discounts</h2>
                             <h5 class="text-light text-famaly inset-11 relative">Promotion description.</h5>
                             <br />
-                            <div class="mfControls text-center  text-xl-left"> <a href="index.html#" class="link text-italic link-lg"> Read more</a> </div>
+                            <div class="mfControls text-center  text-xl-left"> <a href="index.html#" class="link text-italic link-lg link-no-underline"> Read more</a> </div>
                         </div>
                     </div>
                 </div>
@@ -84,7 +84,7 @@
                 <div class="container">
                     <div class="row">
                         <div class="col-md-12 col-xl-4 bg-2 z-ind">
-                            <h2 class="relative text-center  text-xl-left">Find your romantic experience</h2>
+                            <h2 class="relative text-center  text-xl-left">Find Your Romantic Experience</h2>
                             <!-- RD Mailform -->
                             <form class='rd-mailform' method="post" action="http://livedemo00.template-help.com/wt_58330/bat/rd-mailform.php">
                                 <!-- RD Mailform Type -->
@@ -163,6 +163,7 @@
                 </div>
             </section>
             <!-- END Luxury hotel-->
+            
             <!-- Swiper -->
             <div class="swiper-container swiper-slider" data-height="85vh" data-min-height="350px">
                 <div class="swiper-wrapper text-center">
@@ -173,7 +174,7 @@
                                     <div class="col-sm-8">
                                         <h3>Experience One</h3>
                                         <p class="heading-6">Experience small description</p> 
-                                        <a href="index.html#" class="btn btn-sm btn-primary">Book your experience</a> 
+                                        <a href="index.html#" class="btn btn-sm btn-primary">Book Your Experience</a> 
                                     </div>
                                 </div>
                             </div>
@@ -188,7 +189,7 @@
                                     <div class="col-sm-8">
                                         <h3>Experience Two</h3>
                                         <p class="heading-6">Experience small description</p> 
-                                        <a href="index.html#" class="btn btn-sm btn-primary">Book your experience</a> 
+                                        <a href="index.html#" class="btn btn-sm btn-primary">Book Your Experience</a> 
                                     </div>
                                 </div>
                             </div>
@@ -320,12 +321,33 @@
             <!-- Contacts -->
             <section class="well-md well-md-var-2">
                 <div class="container text-center text-md-left contact-info">
-                    <h2>Contact us</h2>
+                    <h2>Suscribe and receive special offers</h2>
                     <div class="row contact-info offset-3">
-                        <div class="col-md-6"> <a href="mailto:#" class=" heading-6"> info@lovestorytravels.com</a> <small>email address</small> </div>
+                        <div class="col-md-6"> 
+                            <form class="rd-mailform" method="post" action="http://livedemo00.template-help.com/wt_58330/bat/rd-mailform.php">
+                            <!-- RD Mailform Type -->
+                            <input type="hidden" name="form-type" value="contact">
+                            <!-- END RD Mailform Type -->
+                            <fieldset class="border-none">
+                                <div class="row z-ind offset-13">
+                                    <div class="col-sm-8 col-sm-preffix-2 offset-3 border-none col-xl-12 col-xl-preffix-0 inset-16">
+                                        <label data-add-placeholder="" data-add-icon="" class="mfInput">
+                                            <input type="text" name="email" data-constraints="@NotEmpty @Email">
+                                        <span class="mfValidation show error" data-index="0">This field should not be empty.</span><span class="mfIcon default"><span></span></span><span class="mfPlaceHolder default">E-mail</span></label>
+                                    </div>
+                                    <div class="mfInfo mfProgress"><span class="cnt"></span><span class="loader"></span><span class="msg"></span></div>
+                                </div>
+                            </fieldset>
+
+
+                            <div class="mfControls text-center  text-xl-left">
+                                <button class="btn btn-xs btn-primary fl-budicons-launch-right164 fl" type="submit">Suscribe</button>
+                            </div>
+                        </form>
+                        </div>
                         <div class="col-md-4 col-md-preffix-2 offset-6"> 
-                            <a href="index.html#" class="btn btn-lg btn-primary fl-budicons-launch-right164 fl">
-                                Book Availability
+                            <a href="index.html#" class="btn btn-md btn-primary fl-budicons-launch-right164 fl">
+                                Contact Us
                             </a> 
                         </div>
                     </div>
@@ -347,7 +369,7 @@
                     <li><a href="contact.html">Contact Us</a></li>
                 </ul>
                 <div class="divider-2"></div>
-                <p> &#169; <span id="copyright-year">2016.</span> Love Sory Travel <a href='index-5.html'>Privacy Policy</a>
+                <p> &#169; <span id="copyright-year">2016.</span> Love Story Travel <a href='index-5.html'>Privacy Policy</a>
                     <!-- {%FOOTER_LINK} -->
                 </p>
             </div>
