--- a/index.html
+++ b/index.html
@@ -37,9 +37,14 @@
                             <button class="rd-navbar-toggle" data-rd-navbar-toggle=".rd-navbar"><span></span></button>
                             <!-- END RD Navbar Toggle -->
                             <!-- RD Navbar Brand -->
-                            <div class="rd-navbar-brand"> <a href="index.html" class="brand-name">
-                                Love Story<br> <span class="brand-slogan">Special Way to Travel</span>
-                            </a> </div>
+                            <div class="rd-navbar-brand"> 
+                                <a href="index.html" class="brand-name">
+                                    Love Story<br> 
+                                    <span class="brand-slogan">Special Way to Travel</span>
+                                    
+                                </a> 
+                                <img src="images/brand.png" id="logo-right" />
+                            </div>
                             <!-- END RD Navbar Brand -->
                         </div>
                         <!-- END RD Navbar Panel -->
@@ -321,34 +326,32 @@
             <!-- Contacts -->
             <section class="well-md well-md-var-2">
                 <div class="container text-center text-md-left contact-info">
-                    <h2>Suscribe and receive special offers</h2>
+                    
                     <div class="row contact-info offset-3">
                         <div class="col-md-6"> 
-                            <form class="rd-mailform" method="post" action="http://livedemo00.template-help.com/wt_58330/bat/rd-mailform.php">
-                            <!-- RD Mailform Type -->
-                            <input type="hidden" name="form-type" value="contact">
-                            <!-- END RD Mailform Type -->
-                            <fieldset class="border-none">
-                                <div class="row z-ind offset-13">
-                                    <div class="col-sm-8 col-sm-preffix-2 offset-3 border-none col-xl-12 col-xl-preffix-0 inset-16">
-                                        <label data-add-placeholder="" data-add-icon="" class="mfInput">
-                                            <input type="text" name="email" data-constraints="@NotEmpty @Email">
-                                        <span class="mfValidation show error" data-index="0">This field should not be empty.</span><span class="mfIcon default"><span></span></span><span class="mfPlaceHolder default">E-mail</span></label>
+                            <h4>Suscribe and receive special offers</h4>
+                        </div>
+                        <div class="col-md-4"> 
+                            <form class="rd-mailform" method="post" action="/bat/rd-mailform.php">
+                                <!-- RD Mailform Type -->
+                                <input type="hidden" name="form-type" value="contact">
+                                <!-- END RD Mailform Type -->
+                                <fieldset class="border-none">
+                                    <div class="row z-ind offset-13">
+                                        <div class="col-sm-8 col-sm-preffix-2 offset-3 border-none col-xl-12 col-xl-preffix-0 inset-16">
+                                            <label data-add-placeholder="" data-add-icon="" class="mfInput">
+                                                <input type="text" name="email" data-constraints="@NotEmpty @Email">
+                                                <span class="mfIcon default"><span></span></span><span class="mfPlaceHolder default">E-mail</span></label>
+                                        </div>
+                                        <div class="mfInfo mfProgress"><span class="cnt"></span><span class="loader"></span><span class="msg"></span></div>
                                     </div>
-                                    <div class="mfInfo mfProgress"><span class="cnt"></span><span class="loader"></span><span class="msg"></span></div>
-                                </div>
-                            </fieldset>
-
-
+                                </fieldset>
+                            </form>
+                        </div>
+                        <div class="col-md-2"> 
                             <div class="mfControls text-center  text-xl-left">
                                 <button class="btn btn-xs btn-primary fl-budicons-launch-right164 fl" type="submit">Suscribe</button>
                             </div>
-                        </form>
-                        </div>
-                        <div class="col-md-4 col-md-preffix-2 offset-6"> 
-                            <a href="index.html#" class="btn btn-md btn-primary fl-budicons-launch-right164 fl">
-                                Contact Us
-                            </a> 
                         </div>
                     </div>
                 </div>
@@ -360,15 +363,6 @@
     ==========================================================-->
         <footer class="page-footer well-xs">
             <div class="container text-center text-md-left">
-                <ul class="inline-list">
-                    <li><a href="index.html" class="active">Home</a></li>
-                    <li><a href="about-us.html">Experiencies</a></li>
-                    <li><a href="paquetes.html">Destinations</a></li>
-                    <li><a href="tours.html">Extras</a></li>
-                    <li><a href="contact.html">About Us</a></li>
-                    <li><a href="contact.html">Contact Us</a></li>
-                </ul>
-                <div class="divider-2"></div>
                 <p> &#169; <span id="copyright-year">2016.</span> Love Story Travel <a href='index-5.html'>Privacy Policy</a>
                     <!-- {%FOOTER_LINK} -->
                 </p>
