--- a/index.html
+++ b/index.html
@@ -13,7 +13,9 @@
     <!--[if lt IE 10]>
     <script src="js/html5shiv.min.js"></script>
     <![endif]-->
-    <meta name="google-site-verification" content="hytq6BvtfoT-1kFNI5jTr_Eca1sp0BazT4cIP_AA6Ts" /> </head>
+    <meta name="google-site-verification" content="hytq6BvtfoT-1kFNI5jTr_Eca1sp0BazT4cIP_AA6Ts" /> 
+    <script src="https://use.fontawesome.com/c4a4a35081.js"></script>
+</head>
 
 <body>
     <!-- The Main Wrapper -->
@@ -350,7 +352,7 @@
                         </div>
                         <div class="col-md-2"> 
                             <div class="mfControls text-center  text-xl-left">
-                                <button class="btn btn-xs btn-primary fl-budicons-launch-right164 fl" type="submit">Suscribe</button>
+                                <button class="btn btn-sm btn-primary fl-budicons-launch-right164 fl" type="submit">Suscribe</button>
                             </div>
                         </div>
                     </div>
@@ -362,11 +364,20 @@
                               FOOTER
     ==========================================================-->
         <footer class="page-footer well-xs">
+            <div class="container text-center text-md-right">
+                <ul class="inline-list">
+                    <li><a href="index.html" ><i class="fa fa-facebook-square" aria-hidden="true"></i></a></li>
+                    <li><a href="about-us.html"><i class="fa fa-instagram" aria-hidden="true"></i></a></li>
+                    <li><a href="about-us.html"><i class="fa fa-twitter" aria-hidden="true"></i></a></li>
+                </ul>
+            </div>
+            
             <div class="container text-center text-md-left">
                 <p> &#169; <span id="copyright-year">2016.</span> Love Story Travel <a href='index-5.html'>Privacy Policy</a>
                     <!-- {%FOOTER_LINK} -->
                 </p>
             </div>
+            
         </footer>
     </div>
     <div id="getSize"><p>W: <span></span></p><p>H: <span></span></p></div>
