--- a/about-us.html
+++ b/about-us.html
@@ -133,59 +133,60 @@
             </div>
         </section>
         <!-- END Unite people-->
-        <!-- Meet our team -->
-        <section class="well-md well-md-var-3 bg-image-3">
+        <!-- Testimonials -->
+        <section class="well-md bg-image-1">
             <div class="container text-center">
-                <h3>Meet our team</h3>
-                <div class="row">
-                    <!-- Owl Carousel -->
-                    <div class="owl-carousel owl-carousel-lg" data-loop="false" data-dots="true" data-items="1" data-sm-items="2" data-lg-items="4">
-                        <div class="col-md-3">
-                            <img  class="round" src="images/page3_img15.jpg" width="148" height="148" alt="">
-                            <h6>Eva Savits</h6>
-                            <h6>Regional General Manager</h6>
-                            <p class="heading-5 text-famaly text-light">Lorem ipsum dolor sit amet, 
-                                consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore 
-                                et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation 
-                                ullamco laboris nisi ut aliquip ex ea commodo consequat.
-                            </p>
-                        </div>
-                        <div class="col-md-3">
-                            <img  class="round" src="images/page3_img16.jpg" width="148" height="148" alt="">
-                            <h6>David Austin</h6>
-                            <h6>Director of Operations</h6>
-                            <p class="heading-5 text-famaly text-light">Lorem ipsum dolor sit amet, consectetur 
-                                adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
-                                Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip 
-                                ex ea commodo consequat.
-                            </p>
-                        </div>
-                        <div class="col-md-3">
-                            <img  class="round" src="images/page3_img17.jpg" width="148" height="148" alt="">
-                            <h6>Natalie Barnes</h6>
-                            <h6>Associate Director of Sales</h6>
-                            <p class="heading-5 text-famaly text-light">Lorem ipsum dolor sit amet, consectetur 
-                                adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
-                                Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip 
-                                ex ea commodo consequat.
-                            </p>
-                        </div>
-                        <div class="col-md-3">
-                            <img  class="round" src="images/page3_img18.jpg" width="148" height="148" alt="">
-                            <h6>Thomas Bishop</h6>
-                            <h6>Catering Sales & Events</h6>
-                            <p class="heading-5 text-famaly text-light">Lorem ipsum dolor sit amet, consectetur 
-                                adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
-                                Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip 
-                                ex ea commodo consequat.
-                            </p>
+                <h2>Testimonials</h2>
+
+                <div class="row row-md-center">
+                    <div class="col-md-10">
+                        <!-- Owl Carousel -->
+                        <div class="owl-carousel" data-dots="true">
+                            <div class="owl-item">
+
+                                <img src="images/page1_img02.png" width="48" height="41" alt="">
+
+                                <p class="heading-6">Lorem ipsum dolor sit amet, consectetur adipiscing 
+                                        elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
+                                        Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi 
+                                        ut aliquip ex ea commodo consequat. </p>
+                                <img src="images/page1_img03.jpg" width="100" height="100" alt="">
+
+                                <p class=" offset-3">Andrea Lawrence</p>
+
+                            </div>
+                            <div class="owl-item">
+
+                                <img src="images/page1_img02.png" width="48" height="41" alt="">
+
+                                <p class="heading-6">Lorem ipsum dolor sit amet, consectetur adipiscing 
+                                        elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
+                                        Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi 
+                                        ut aliquip ex ea commodo consequat. </p>
+                                <img src="images/page1_img04.jpg" width="100" height="100" alt="">
+
+                                <p class=" offset-3">Matthew Perkins</p>
+
+                            </div>
+                            <div class="owl-item">
+
+                                <img src="images/page1_img02.png" width="48" height="41" alt="">
+
+                                <p class="heading-6">Lorem ipsum dolor sit amet, consectetur adipiscing 
+                                        elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
+                                        Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi 
+                                        ut aliquip ex ea commodo consequat. </p>
+                                <img src="images/page1_img05.jpg" width="100" height="100" alt="">
+
+                                <p class=" offset-3">Marie Gonzales</p>
+                            </div>
                         </div>
                     </div>
-                    <!-- END Owl Carousel -->
                 </div>
+                <!-- END Owl Carousel -->
             </div>
         </section>
-        <!-- END Meet our team-->
+        <!-- END Testimonials-->
         <!-- Main services -->
         <section class="well-md well-md-var-2">
             <div class="container">
@@ -251,15 +252,9 @@
                                 Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip 
                                 ex ea commodo consequat. </h6>
                </div>
-               <div class="col-md-10 offset-7">
-                   <p class="inset-9">Lorem ipsum dolor sit amet, consectetur 
-                                adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
-                                Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip 
-                                ex ea commodo consequat.</p>
-               </div>
             </div>
 
-                <div class="btn btn-md btn-primary offset-9">Read More
+                <div class="btn btn-md btn-primary offset-9">Book your experience
                 </div>
             </div>
         </section>
