--- a/bat/template.html
+++ b/bat/template.html
@@ -142,7 +142,7 @@
                                             </tr>
                                             <tr>
                                                 <td align="left" valign="top" style="font-family: Arial, sans-serif; font-size: 24px; mso-line-height-rule: exactly; line-height: 0px; font-weight: 700;color: #252525; padding-left: 20px;">
-                                                    <!-- #{Subject} -->test
+                                                    <!-- #{Subject} -->
                                                 </td>
                                             </tr>
                                             <tr>
@@ -156,7 +156,7 @@
                                                                 <table width="100%" align="center" cellpadding="0" cellspacing="0" border="0">
                                                                     <tr>
                                                                         <td width="40" align="left" valign="top" style="padding: 0 0px 0 0;font-family: Arial, sans-serif; font-size: 14px; mso-line-height-rule: exactly; line-height: 20px; font-weight: 400;color: #302f35;font-weight: 700;padding-left: 20px;">
-                                                                            <!-- #{FromState} -->test
+                                                                            <!-- #{FromState} -->
                                                                         </td>
                                                                         <td align="left" valign="top" style="font-family: Arial, sans-serif; font-size: 14px; mso-line-height-rule: exactly; line-height: 20px; font-weight: 400;color: #252525;">
                                                                             <!-- #{FromEmail} -->
@@ -165,7 +165,7 @@
 
                                                                     <tr>
                                                                         <td width="40" align="left" valign="top" style="padding: 15 15px 0 0;font-family: Arial, sans-serif; font-size: 14px; mso-line-height-rule: exactly; line-height: 20px; font-weight: 400;color: #302f35;font-weight: 700;padding-left: 20px;">
-                                                                            <!-- #{FromName} -->test
+                                                                            <!-- #{FromName} -->
                                                                         </td>
                                                                         <td align="left" valign="top" style="font-family: Arial, sans-serif; font-size: 14px; mso-line-height-rule: exactly; line-height: 20px; font-weight: 400;color: #252525;padding-left: 20px;">
                                                                             <!-- #{FromNameVal} -->
